# rust-folder-crate

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: argc.rs  error.rs  main.rs
